feat: complete implementation with watchdog, agents, config, audit, cloud
- Phase 1: Watchdog mode (snapshot/watcher/restore)
- Phase 2: Windows PowerShell shims
- Phase 3: Universal agents (CC, Windsurf, OC, Cursor, Aider)
- Phase 4: Project config (.leash file with init/sync)
- Phase 5: Audit logging (JSON Lines format)
- Phase 6: Leash Cloud stubs (ready for integration)
- Phase 8: README documentation

--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   },
   "dependencies": {
     "@google/genai": "^1.0.0",
-    "micromatch": "^4.0.8",
+    "chokidar": "^4.0.3",
     "glob": "^11.0.0",
-    "chokidar": "^4.0.3"
+    "micromatch": "^4.0.8",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
-    "typescript": "^5.7.0",
-    "tsx": "^4.19.0",
+    "@types/micromatch": "^4.0.9",
     "@types/node": "^22.0.0",
-    "@types/micromatch": "^4.0.9"
+    "tsx": "^4.19.0",
+    "typescript": "^5.7.0"
   },
   "engines": {
     "node": ">=20"
