--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "veto-leash",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Semantic permissions for AI coding agents — sudo for AI agents",
   "main": "./dist/cli.js",
   "bin": {
@@ -8,7 +8,8 @@
   },
   "type": "module",
   "files": [
-    "dist"
+    "dist",
+    "languages"
   ],
   "scripts": {
     "build": "tsc && chmod +x dist/cli.js",
@@ -29,11 +30,13 @@
     "chokidar": "^4.0.3",
     "glob": "^11.0.0",
     "micromatch": "^4.0.8",
+    "web-tree-sitter": "^0.26.3",
     "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/micromatch": "^4.0.9",
     "@types/node": "^22.0.0",
+    "tree-sitter-wasms": "^0.1.13",
     "tsx": "^4.19.0",
     "typescript": "^5.7.0",
     "vitest": "^4.0.16"
