--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,62 +1,22 @@
 steps:
-  # Build and push Docker image
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'build'
-      - '-t'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:$COMMIT_SHA'
-      - '-t'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:latest'
-      - '--build-arg'
-      - 'VITE_WORKOS_CLIENT_ID=${_VITE_WORKOS_CLIENT_ID}'
-      - '--build-arg'
-      - 'VITE_WORKOS_REDIRECT_URI=${_VITE_WORKOS_REDIRECT_URI}'
-      - '--build-arg'
-      - 'VITE_WORKOS_PROD_REDIRECT_URI=${_VITE_WORKOS_PROD_REDIRECT_URI}'
-      - '--build-arg'
-      - 'VITE_API_URL=${_VITE_API_URL}'
-      - '--build-arg'
-      - 'VITE_SITE_URL=${_VITE_SITE_URL}'
-      - '-f'
-      - 'Dockerfile'
-      - '.'
-
-  # Push image
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:$COMMIT_SHA', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:latest', '--build-arg', 'VITE_WORKOS_CLIENT_ID=${_VITE_WORKOS_CLIENT_ID}', '--build-arg', 'VITE_WORKOS_REDIRECT_URI=${_VITE_WORKOS_REDIRECT_URI}', '--build-arg', 'VITE_WORKOS_PROD_REDIRECT_URI=${_VITE_WORKOS_PROD_REDIRECT_URI}', '--build-arg', 'VITE_API_URL=${_VITE_API_URL}', '--build-arg', 'VITE_API_WS_URL=${_VITE_API_WS_URL}', '--build-arg', 'VITE_SITE_URL=${_VITE_SITE_URL}', '-f', 'Dockerfile', '.']
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'push'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:$COMMIT_SHA'
-
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:$COMMIT_SHA']
   - name: 'gcr.io/cloud-builders/docker'
-    args:
-      - 'push'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:latest'
-
-  # Deploy to Cloud Run
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:latest']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
-    args:
-      - 'run'
-      - 'deploy'
-      - 'veto-frontend'
-      - '--image'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:$COMMIT_SHA'
-      - '--region'
-      - 'us-central1'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
-      - '--port'
-      - '80'
+    args: ['run', 'deploy', 'veto-frontend', '--image', 'us-central1-docker.pkg.dev/$PROJECT_ID/veto-repo/veto-frontend:$COMMIT_SHA', '--region', 'us-central1', '--platform', 'managed', '--allow-unauthenticated', '--port', '80']
 
 substitutions:
-  _VITE_WORKOS_CLIENT_ID: 'client_01KARW4F4K9JARV1KWJJDZJQJP'
+  _VITE_WORKOS_CLIENT_ID: 'client_01KARW4FD061DWHWZRE1ZEM3JP'
   _VITE_WORKOS_REDIRECT_URI: 'https://runveto.com/callback'
   _VITE_WORKOS_PROD_REDIRECT_URI: 'https://runveto.com/callback'
   _VITE_API_URL: 'https://api.runveto.com/api'
+  _VITE_API_WS_URL: 'wss://api.runveto.com/ws'
   _VITE_SITE_URL: 'https://runveto.com'
 
 options:
   logging: CLOUD_LOGGING_ONLY
-
 timeout: '1200s'
