--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,21 +50,6 @@ jobs:
       - name: Test
         run: pnpm turbo test --filter='./packages/*'
 
-  go:
-    name: Go TUI
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-go@v5
-        with:
-          go-version: "1.22"
-          cache-dependency-path: packages/cli/go/go.sum
-
-      - name: Build Go binary
-        working-directory: packages/cli/go
-        run: go build -ldflags="-s -w" -o veto-linux-amd64 ./cmd/veto
-
   python:
     name: Python SDK
     runs-on: ubuntu-latest
@@ -98,13 +83,12 @@ jobs:
   status:
     name: CI Status
     runs-on: ubuntu-latest
-    needs: [build, go, python]
+    needs: [build, python]
     if: always()
     steps:
       - name: Check status
         run: |
           if [[ "${{ needs.build.result }}" == "failure" ]] || \
-             [[ "${{ needs.go.result }}" == "failure" ]] || \
              [[ "${{ needs.python.result }}" == "failure" ]]; then
             echo "CI failed"
             exit 1
