chore: release veto-sdk 1.2.0 and veto (Python) 0.2.0
- Bump veto-sdk (TypeScript) from 1.1.0 → 1.2.0
- Bump veto (Python) from 0.1.0 → 0.2.0
- Fix package name from 'veto' to 'veto-sdk' in package.json
- Add CHANGELOG for Python SDK (browser-use integration)

Published:
- npm: https://www.npmjs.com/package/veto-sdk/v/1.2.0
- PyPI: https://pypi.org/project/veto/0.2.0/

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "veto",
-  "version": "0.1.0",
+  "name": "veto-sdk",
+  "version": "1.2.0",
   "description": "A guardrail system that intercepts and validates AI agent tool calls",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
