Add browser-native prompt injection sanitizer
Pre-tool-call browser content sanitizer that detects and strips hidden
DOM content (display:none, visibility:hidden, opacity:0, offscreen,
zero-size, clip, text-indent, aria-hidden, hidden attr), zero-width
Unicode characters, and HTML comments that may contain prompt injection
payloads.

Three sanitization modes (strict/balanced/permissive) with full audit
trail. Every detection produces an explainable entry in the report.

Closes #23

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -99,6 +99,10 @@
     "./benchmark": {
       "types": "./dist/benchmark/index.d.ts",
       "import": "./dist/benchmark/index.js"
+    },
+    "./browser": {
+      "types": "./dist/browser/index.d.ts",
+      "import": "./dist/browser/index.js"
     }
   },
   "dependencies": {
