Add Ed25519 signed policy bundles with pinning
Implement cryptographic signing and verification for policy bundles
using Node.js built-in Ed25519 support. Bundles are fail-closed by
default -- missing or invalid signatures block policy loading when
signing is configured as required.

- signing/signer.ts: key generation, sign, verify, canonicalize
- signing/bundle.ts: create, verify, read/write signed bundles
- signing/types.ts: SignedBundle, SigningConfig, error classes
- CLI commands: keygen, sign, verify
- RuleLoader: auto-discovers .signed.json files in rules directory
- Config: signing.enabled, publicKeys, required, pinnedVersion, pinnedHash
- Key rotation: tries all trusted public keys when ID mismatch
- 36 new tests covering tamper detection, key rotation, pinning

Closes #15

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -99,6 +99,10 @@
     "./benchmark": {
       "types": "./dist/benchmark/index.d.ts",
       "import": "./dist/benchmark/index.js"
+    },
+    "./signing": {
+      "types": "./dist/signing/index.d.ts",
+      "import": "./dist/signing/index.js"
     }
   },
   "dependencies": {
