Add policy template library with CLI commands
Ship 6 production-ready policy templates (email-safety, file-access,
api-rate-limit, data-classification, browser-navigation, code-execution)
with typed param schemas, structured substitution engine, and CLI
discovery/apply workflow (veto template list/show/apply).

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -96,6 +96,10 @@
       "types": "./dist/custom/index.d.ts",
       "import": "./dist/custom/index.js"
     },
+    "./templates": {
+      "types": "./dist/templates/index.d.ts",
+      "import": "./dist/templates/index.js"
+    },
     "./benchmark": {
       "types": "./dist/benchmark/index.d.ts",
       "import": "./dist/benchmark/index.js"
