Add browser agent integration adapters
Implement first-party integration adapters for browser-use, Playwright,
and Puppeteer with shared BrowserAgentAdapter interface. Each adapter
validates browser actions (navigate, click, fill, type, etc.) through
Veto's validation pipeline before execution.

Includes:
- Shared adapter contract (BaseBrowserAdapter) with intercept/wrap API
- browser-use adapter wrapping act() with policy validation
- Playwright adapter wrapping page.goto/click/fill/type/evaluate
- Puppeteer adapter wrapping page.goto/click/type/select/evaluate
- Starter policy templates for navigation, input, and download safety
- Examples for browser-use and Playwright integration
- 52 tests covering adapter wrapping, policy evaluation, and YAML validity

Closes #31

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -28,7 +28,11 @@
     "llm",
     "openai",
     "anthropic",
-    "gemini"
+    "gemini",
+    "browser-use",
+    "playwright",
+    "puppeteer",
+    "browser-agent"
   ],
   "author": "",
   "license": "MIT",
@@ -65,6 +69,7 @@
   },
   "files": [
     "dist",
+    "templates",
     "README.md"
   ],
   "exports": {
@@ -99,6 +104,22 @@
     "./benchmark": {
       "types": "./dist/benchmark/index.d.ts",
       "import": "./dist/benchmark/index.js"
+    },
+    "./integrations": {
+      "types": "./dist/integrations/index.d.ts",
+      "import": "./dist/integrations/index.js"
+    },
+    "./integrations/browser-use": {
+      "types": "./dist/integrations/browser-use.d.ts",
+      "import": "./dist/integrations/browser-use.js"
+    },
+    "./integrations/playwright": {
+      "types": "./dist/integrations/playwright.d.ts",
+      "import": "./dist/integrations/playwright.js"
+    },
+    "./integrations/puppeteer": {
+      "types": "./dist/integrations/puppeteer.d.ts",
+      "import": "./dist/integrations/puppeteer.js"
     }
   },
   "dependencies": {
