--- a/packages/sdk-python/pyproject.toml
+++ b/packages/sdk-python/pyproject.toml
@@ -23,6 +23,7 @@ keywords = [
 dependencies = [
     "pyyaml>=6.0",
     "aiohttp>=3.8.0",
+    "jsonschema>=4.20.0",
 ]
 
 [project.optional-dependencies]
