fix(conformance): make Python runner env-agnostic and TS runner deterministic
Addresses Greptile review feedback (score 3/5):

1. package.json: Replace hardcoded .venv/bin/python path with python3
   for environment-agnostic execution (CI/fresh clones)

2. ts-runner.ts: Sort fixture files for deterministic test order
   across platforms/filesystems

3. README.md: Add prerequisites section documenting Python setup
   options (venv or global install)

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "version": "changeset version",
     "release": "pnpm build && changeset publish",
     "conformance:ts": "pnpm --filter veto-sdk exec vitest run --config ../../conformance/vitest.config.ts",
-    "conformance:py": "packages/sdk-python/.venv/bin/python conformance/runners/py_runner.py",
+    "conformance:py": "python3 conformance/runners/py_runner.py",
     "conformance": "pnpm conformance:ts && pnpm conformance:py",
     "prepare": "husky"
   },
