Use VETO_PAT for release workflow and auto-bump Python version
- Use VETO_PAT instead of GITHUB_TOKEN so changesets can create the
  "Version Packages" PR (org settings block Actions from creating PRs
  with the default token)
- Auto-bump Python SDK version to match npm minor version before PyPI
  publish, so pyproject.toml no longer needs manual bumps

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,9 +66,26 @@ jobs:
           commit: "chore: release packages"
           title: "chore: release packages"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.VETO_PAT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: Bump Python SDK version to match npm minor
+        if: steps.changesets.outputs.published == 'true'
+        run: |
+          NPM_VERSION=$(node -p "require('./packages/sdk/package.json').version")
+          NPM_MINOR=$(echo "$NPM_VERSION" | cut -d. -f2)
+          CURRENT_PY=$(grep -m1 'version = ' packages/sdk-python/pyproject.toml | cut -d'"' -f2)
+          NEW_PY="0.${NPM_MINOR}.0"
+          if [ "$CURRENT_PY" != "$NEW_PY" ]; then
+            sed -i "s/version = \"$CURRENT_PY\"/version = \"$NEW_PY\"/" packages/sdk-python/pyproject.toml
+            git add packages/sdk-python/pyproject.toml
+            git commit -m "chore: bump Python SDK to $NEW_PY"
+            git push origin master
+            echo "Bumped Python SDK from $CURRENT_PY to $NEW_PY"
+          else
+            echo "Python SDK already at $NEW_PY"
+          fi
 
       - name: Publish Python SDK to PyPI
         if: steps.changesets.outputs.published == 'true'
@@ -96,7 +113,7 @@ jobs:
               --target master
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.VETO_PAT }}
 
   # Manual release option
   release-manual:
