--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/node": "^20.10.0",
     "@vitest/coverage-v8": "^4.0.16",
+    "browser-use-node": "^0.1.11",
     "openai": "^4.77.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
@@ -44,7 +45,8 @@
     "@anthropic-ai/sdk": "^0.20.0",
     "@google/genai": "^1.34.0",
     "openai": "^4.0.0",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "browser-use-node": ">=0.1.0"
   },
   "peerDependenciesMeta": {
     "openai": {
@@ -57,6 +59,9 @@
       "optional": true
     },
     "zod": {
+      "optional": true
+    },
+    "browser-use-node": {
       "optional": true
     }
   },
@@ -103,6 +108,10 @@
     "./compiler": {
       "types": "./dist/compiler/index.d.ts",
       "import": "./dist/compiler/index.js"
+    },
+    "./integrations/browser-use": {
+      "types": "./dist/integrations/browser-use/index.d.ts",
+      "import": "./dist/integrations/browser-use/index.js"
     }
   },
   "dependencies": {
